// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WindowWrapper renders component 1`] = `
<div
  className="makeStyles-wrapper-2"
>
  <Page />
</div>
`;

exports[`WindowWrapper renders with custom className 1`] = `
<div
  className="makeStyles-wrapper-2 test-class"
>
  <Page />
</div>
`;
